--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@
             </fieldset>
             <br><br><br>
             <div style="float: left;"><font size="5px" color="black"><a href="body.html" class="back-button">Back</a></font></div>
-            <div style="float: right;"><font size="5px" color="black"><a href="education.html" class="next-button">Next</a></font></div>
+            <div style="float: right;"><font size="5px" color="black"><a href="education2.html" class="next-button">Next</a></font></div>
 
     
     
