--- a/education2.html
+++ b/education2.html
@@ -83,7 +83,7 @@
 </font>
 <br><br>
 <div style="float: left;"><font size="5px" color="#272829"><a href="aboutme.html" class="back-button">Back</a></font></div>
-<div style="float: right;"><font size="5px" color="#272829"><a href="project.html" class="next-button">Next</a></font></div>
+<div style="float: right;"><font size="5px" color="#272829"><a href="project3.html" class="next-button">Next</a></font></div>
 
 </body>
 </html>
