--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
     <center> <img src="binduimg.jpg" class="custom-image "> </center>
     
     <title>aboutme</title>
-    <link rel="stylesheet" href="about1.css">
+    <link rel="stylesheet" href="abouta.css">
 </head>
 <body bgcolor="#DDE6ED">
     
